fixed margins on main-wrap class

--- a/assets/css/bauhaus.css
+++ b/assets/css/bauhaus.css
@@ -52,6 +52,10 @@
   src:url('../fonts/fonts/bauhaus-font/Mandala/Mandala Regular.otf')
 }
 
+@font-face{
+  font-family:"MandalaItalic";
+  src:url('../fonts/fonts/bauhaus-font/Mandala/Mandala Italic.otf')
+}
 
 /* ---------Basic and index page------------ */
 
@@ -470,7 +474,7 @@ color:#21409a;
 
   /* writing-mode:vertical-lr; */
   /* text-orientation: upright; */
-  font-size:1.5em;
+  font-size:1.8em;
   text-align:center;
   /* viewport HEIGHT here AND NOT WIDTH!!! ITS VERTICAL STUPID */
   /* white-space: nowrap; */
@@ -494,12 +498,50 @@ text-decoration: underline;
 
 }
 
+#articles h1{
+  text-decoration:none;
+  text-align:center;
+  font-family:'CypherBold';
+  margin:0;
+  padding:0;
+
+}
+
+#articles h3{
+  font-size:1.5em;
+  text-align:left;
+  text-decoration:none;
+  font-family:'CypherBold';
+  margin:0;
+  padding-top:2vh;
+
+}
+
+#articles h4{
+  font-size:1.2em;
+  text-align:left;
+  text-decoration:none;
+  font-family:'CypherBold';
+  margin:0;
+  padding-top:2vh;
+  padding-left:1em;
+  letter-spacing:1px;
+
+}
+
+.bauhaus-line-chapter{
+     width:100%;
+     height:2px;
+     background: black;
+     margin-bottom:1em;
+}
+
 .bauhaus-line{
    width:100%;
    height:4px;
    background: black;
    margin-bottom:1em;
-  }
+}
 
 
 .scroll-column{
@@ -507,15 +549,38 @@ text-decoration: underline;
 }
 
 #author{
-  font-size:6em;
-  font-family:'CypherRegular';
+  font-family:'CypherSemiBold';
+  color:black;
+  font-size:1em;
+  text-align:right;
+
+
 }
 
 #article-info{
-  /* display:inline-block; */
+  color:black;
+  font-family:'CypherSemiBold';
+  font-size:1em;
+  text-align:right;
+
   /* writing-mode:vertical-lr; */
 }
 
+/* align items center for the article only */
+
+.info{
+  padding-left:4.5vw;
+  padding-right:4.5vw;
+  font-size:1em;
+  font-family:'CypherSemiBold';
+  align-self:flex-end;
+  text-align:right;
+  color:black;
+}
+.info.story{
+  align-self:center;
+
+}
 .pointer{
   text-align:center;
   /* float:left; */
@@ -623,6 +688,10 @@ padding:0.5em 0.5em 0.5em 0.5em;
 
 /* transform: rotate(-10deg); */
 
+}
+
+.blockquote{
+  font-family:'MandalaItalic'
 }
 /* .col .style-title h1,h2,h3,h4{
 
